# dismech-rods

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  compile_build.sh  dismech.sh  errata.md  init_local_config.sh  run.sh  run_example.sh  run_robot.sh  setup.py  template_option.txt  test
cmake/modules/: FindMKL.cmake
cpp_examples/: README.md  dismech.sh
cpp_examples/cantilever_case/: cantilever_deflection_plotter.py  cantilever_example.cpp
cpp_examples/friction_case/: friction_example.cpp  friction_runner.py  kinetic_energy_plotter.py
cpp_examples/helix_case/: helix_deflection_plotter.py
cpp_examples/real2sim_case/: calibrator.py  real2sim_calibration_example.cpp  target_kappa_calculator.py
custom_bot/: customBot.cpp
docker/: Dockerfile  README.md
docs/: CMakeLists.txt  Doxyfile  README.md  citation.md  citation_acknowledgement.rst  classlist.rst  conf.py  filelist.rst  index.rst  install_instructions.md  install_instructions.rst  intro.md  namespacelist.rst  requirements.txt  structlist.rst  todo.md  todo.rst
docs/breathe/class/: classOption.rst  classactiveEntanglementController.rst  classbackwardEuler.rst  classbaseController.rst  classbaseForce.rst  classbaseSolver.rst  classbaseTimeStepper.rst  classcollisionDetector.rst  classcontactForce.rst  classdampingForce.rst  classderSimulationEnvironment.rst  classdgbsvSolver.rst  classelasticBendingForce.rst  classelasticJoint.rst  classelasticRod.rst  classelasticStretchingForce.rst  classelasticTwistingForce.rst  classexplicitTimeStepper.rst  classfloorContactForce.rst  classforceContainer.rst  classforwardEuler.rst  classgravityForce.rst  classheadlessDERSimulationEnvironment.rst  classimplicitMidpoint.rst  classimplicitTimeStepper.rst  classinertialForce.rst  classopenLoopUniformKappaBarController.rst  classopenglDERSimulationEnvironment.rst  classpardisoSolver.rst  classrodNodeLogger.rst  classsetInput.rst  classsoftRobots.rst  classsymbolicEquations.rst  classuniformConstantForce.rst  classvelocityLogger.rst  classverletPosition.rst  classworld.rst  classworldLogger.rst
docs/breathe/file/: Option_8h.rst  activeEntanglementController_8cpp.rst  activeEntanglementController_8h.rst  backwardEuler_8cpp.rst  backwardEuler_8h.rst  baseController_8cpp.rst  baseController_8h.rst  baseForce_8cpp.rst  baseForce_8h.rst  baseSolver_8cpp.rst  baseSolver_8h.rst  baseTimeStepper_8cpp.rst  baseTimeStepper_8h.rst  collisionDetector_8cpp.rst  collisionDetector_8h.rst  contactEnums_8h.rst  contactForce_8cpp.rst  contactForce_8h.rst  dampingForce_8cpp.rst  dampingForce_8h.rst  derSimulationEnvironment_8cpp.rst  derSimulationEnvironment_8h.rst  dgbsvSolver_8cpp.rst  dgbsvSolver_8h.rst  eigenIncludes_8h.rst  elasticBendingForce_8cpp.rst  elasticBendingForce_8h.rst  elasticJoint_8cpp.rst  elasticJoint_8h.rst  elasticRod_8cpp.rst  elasticRod_8h.rst  elasticStretchingForce_8cpp.rst  elasticStretchingForce_8h.rst  elasticTwistingForce_8cpp.rst  elasticTwistingForce_8h.rst  explicitTimeStepper_8cpp.rst  explicitTimeStepper_8h.rst  filesystem__finder_8hpp.rst  floorContactForce_8cpp.rst  floorContactForce_8h.rst  (+42 more)
docs/breathe/namespace/: namespaceEigen.rst  namespaceSymEngine.rst  namespacestd.rst
docs/breathe/struct/: structcollisionDetector_1_1contact__pair.rst  structcollisionDetector_1_1limb__edge__info.rst  structsimParams.rst
docs/classes/: backwardEuler.rst  baseForce.rst  baseSolver.rst  baseTimeStepper.rst  elasticJoint.rst  index.rst  world.rst
docs/files/: index.rst  robotDescription.rst
examples/: templateRobotDescription.cpp
examples/active_entanglement_case/: activeEntanglementExample.cpp  active_entanglement_example.cpp  active_entanglement_params.txt
examples/cantilever_case/: cantileverExample.cpp  cantilever_deflection_plotter.py  cantilever_example.cpp  cantilever_init_velocity_n=201.txt  cantilever_params.txt  cantilever_test.txt  euler_bernoulli_data_E=1e5_T=100s.txt  euler_bernoulli_data_E=1e7_T=20s.txt
examples/friction_case/: frictionExample.cpp  friction_example.cpp  friction_params.txt  friction_runner.py  friction_test.txt  friction_tester.py  kinetic_energy_plotter.py
examples/helix_case/: helixExample.cpp  helix_configuration.txt  helix_deflection_plotter.py  helix_example.cpp  helix_params.txt  helix_test.txt
examples/horton_case/: hortonExample.cpp  horton_example.cpp  horton_params.txt
examples/real2sim_case/: calibrator.py  real2simCalibrationExample.cpp  real2simExample.cpp  real2sim_calibration_example.cpp  real2sim_calibrator_params.txt  real2sim_example.cpp  real2sim_params.txt  soft_limb_data.csv  target_kappas.pkl
examples/spider_case/: spiderExample.cpp  spider_example.cpp  spider_params.txt
knot_configurations/: n1  n2  n3  n4
py_dismech/: __init__.py
py_examples/clip_case/: clip_configuration.txt  test_funcs.py
py_examples/dlo_manipulation_case/: dlo_manipulation_example.py
py_examples/helix_case/: helixExample.py  helix_example.py
py_examples/low_level_control_case/: control_example.py  lowLevelExample.py
py_examples/soft_manipulator_case/: soft_manipulator.py  utils.py
py_examples/spider_case/: spiderExample.py  spider_example.py
src/: Option.h  app.cpp  collisionDetector.cpp  collisionDetector.h  contactPotentialIMC.cpp  contactPotentialIMC.h  dampingForce.cpp  dampingForce.h  eigenIncludes.h  elasticBendingForce.h  elasticRod.cpp  elasticRod.h  elasticStretchingForce.h  elasticTwistingForce.cpp  elasticTwistingForce.h  externalGravityForce.cpp  externalGravityForce.h  globalDefinitions.h  global_const.h  global_definitions.h  inertialForce.h  main.cpp  robotDescription.cpp  robotDescription.h  robot_description.h  setInput.cpp  setInput.h  setInput.tcc  symbolicEquations.cpp  symbolicEquations.h  timeStepper.h  world.cpp  world.h
src/controllers/: activeEntanglementController.cpp  activeEntanglementController.h  active_entanglement_controller.cpp  active_entanglement_controller.h  baseController.cpp  baseController.h  base_controller.cpp  (+15 more)
test/: CMakeLists.txt  MouseInteractionExample.cpp  PrimitivesExample.cpp
(+344 files in other folders)
